# etym-cli

./: .gitignore  README.MD  pyproject.toml  setup.py
etym_cli/: __main__.py  cli.py
tests/: test_cli.py
tests/fixtures/: flow.html
