[project]
name = "etym-cli"
version = "0.0.3"
description = "Command-line tool for etymonline with rich output."
readme = "README.MD"
authors = [{ name = "agmmnn" }]
license = { text = "CC0" }
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "rich",
    "lxml",
]

[project.scripts]
etym = "etym_cli.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etym_cli"]
